# epigenetics

./: .gitignore  CMakeLists.txt  easy_maze2.txt  easy_maze3.txt  easy_maze4.txt  easy_maze_bn.txt  easy_maze_bn2.txt  experiment_main.cpp  ga.py  hidden_layer.cpp  hidden_layer.h  maze.cpp  maze.h  neural_network.cpp  neural_network.h  simple_network.h  testmaze.py
old/: easy_maze.txt
old_files/: easy_maze4.txt  easy_maze4_flipped.txt
research_log/: 9_10_meeting_notes.txt  ga.py  progress_report_9_15.txt
